Split .actions-box into .actions-box and .submit-box. Introduce .button for gradient + :focus & :hover. Fixed misalignments.

--- a/src/webui/livemgr/templates/acls/list.html
+++ b/src/webui/livemgr/templates/acls/list.html
@@ -34,7 +34,7 @@ $(document).ready(function() {
 		Selection.showActions('.delete');
 		Selection.bindListRowClick({url:'{% url webui:acls-index %}{0}'});
 		Selection.bindActionClickConfirm({
-			selector: '.delete',
+			selector: '.actions-box .delete',
 			url: '{% url webui:acls-delete-many %}',
 			onShow: delete_show});
 	}
