--- a/src/webui/livemgr/templates/generic/actions.html
+++ b/src/webui/livemgr/templates/generic/actions.html
@@ -18,11 +18,11 @@ function change_per_page(caller) {
 </script>
 <div class="actions-box">
 	<div style="float: left;">
-		<input type="button" class="action disable" value="{% trans "disable" %}" disabled />
-		<input type="button" class="action enable" value="{% trans "enable" %}" disabled />
-		<input type="button" class="action block" value="{% trans "block" %}" disabled />
-		<input type="button" class="action unblock" value="{% trans "unblock" %}" disabled />
-		<input type="button" class="action delete" value="{% trans "delete" %}" disabled />
+		<input type="button" class="button action disable" value="{% trans "disable" %}" disabled />
+		<input type="button" class="button action enable" value="{% trans "enable" %}" disabled />
+		<input type="button" class="button action block" value="{% trans "block" %}" disabled />
+		<input type="button" class="button action unblock" value="{% trans "unblock" %}" disabled />
+		<input type="button" class="button action delete" value="{% trans "delete" %}" disabled />
 	</div>
 	<div class="per-page-box">
 		<label for="id_per_page">{% trans "show" %} </label>
