--- a/src/webui/livemgr/templates/generic/modal-delete.html
+++ b/src/webui/livemgr/templates/generic/modal-delete.html
@@ -3,7 +3,7 @@
 	<h1>{% trans "Do you want to proceed?" %}</h1>
 	<p class="description"></p>
 	<div class="buttons">
-		<input type="button" value="{% trans "No" %}" class="simplemodal-close no" />
-		<input type="button" value="{% trans "Yes" %}" class="yes" />
+		<input type="button" class="button no simplemodal-close" value="{% trans "No" %}" />
+		<input type="button" class="button yes" value="{% trans "Yes" %}" />
 	</div>
 </div>
