--- a/src/webui/livemgr/templates/groups/form-fieldset-users.html
+++ b/src/webui/livemgr/templates/groups/form-fieldset-users.html
@@ -24,11 +24,11 @@
 		<div class="icon rewind" title="{% trans "Remove" %}"></div>
 		-->
 		<p>
-			<input type="button" id="users_add" value="&gt;" style="height:25px; width: 25px;" />
+			<input type="button" class="button" id="users_add" value="&gt;" style="height:25px; width: 25px;" />
 		</p>
-		<p style="height: 0px;"></p>
+		<p style="height: 10px;"></p>
 		<p>
-			<input type="button" id="users_remove" value="&lt;" style="height:25px; width: 25px;" />
+			<input type="button" class="button" id="users_remove" value="&lt;" style="height:25px; width: 25px;" />
 		</p>
 	</div>
 	<div class="field" style="float: left;">
