--- a/src/webui/livemgr/templates/license/index.html
+++ b/src/webui/livemgr/templates/license/index.html
@@ -64,8 +64,8 @@ $(document).ready(function() {
 				</p>
 			</div>
 		</fieldset>
-		<div class="actions-box">
-			<input id="id_change" type="button" value="{% trans "Change" %}" class="default" />
+		<div class="submit-box">
+			<input id="id_change" type="button" class="button submit default" value="{% trans "Change" %}" />
 		</div>
 	</form>
 </div>
