--- a/src/webui/livemgr/templates/profiles/update.html
+++ b/src/webui/livemgr/templates/profiles/update.html
@@ -133,8 +133,8 @@ $(document).ready(function() {
 				{% endfor %}
 			</div>
 		</fieldset>
-		<div class="actions-box">
-			<input type="submit" value="{% trans "Save" %}" class="default" />
+		<div class="submit-box">
+			<input type="submit" class="button submit default" value="{% trans "Save" %}" />
 		</div>
 	</form>
 </div>
