--- a/src/webui/livemgr/templates/settings/update.html
+++ b/src/webui/livemgr/templates/settings/update.html
@@ -73,8 +73,8 @@
 				{% endfor %}
 			</div>
 		</fieldset>
-		<div class="actions-box">
-			<input type="submit" class="action submit default" value="{% trans "Save" %}" />
+		<div class="submit-box">
+			<input type="submit" class="button submit default" value="{% trans "Save" %}" />
 		</div>
 	</form>
 </div>
