--- a/src/webui/livemgr/templates/groups/edit.html
+++ b/src/webui/livemgr/templates/groups/edit.html
@@ -26,7 +26,7 @@ $(document).ready(function() {
 
 	function setup_events() {
 		Selection.bindActionClickConfirm({
-			selector: '.delete',
+			selector: '.submit-box .delete',
 			url: '{% url webui:groups-delete model.id %}',
 			items: '{{ model.id }}',
 			onShow: delete_show,
