--- a/src/webui/livemgr/templates/license/edit.html
+++ b/src/webui/livemgr/templates/license/edit.html
@@ -11,8 +11,8 @@
 	<form method="post" action="" enctype="multipart/form-data" class="generic">
 		{% csrf_token %}
 		{% include "generic/form-fieldset.html" %}
-		<div class="actions-box">
-			<input type="submit" value="{% trans "Save" %}" class="default" />
+		<div class="submit-box">
+			<input type="submit" class="button submit default" value="{% trans "Save" %}" />
 		</div>
 	</form>
 </div>
