--- a/src/webui/media/css/current/theme.css
+++ b/src/webui/media/css/current/theme.css
@@ -281,7 +281,9 @@ ul#navigator li.selected a {
 	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#ff7f9bca, endColorstr=#ff5c79aa)";
 	*/
 }
+ul#navigator li:focus,
 ul#navigator li:hover,
+ul#navigator li a:focus,
 ul#navigator li a:hover {
 	color: #fff;
 	background-color: #7f9bca;
@@ -293,11 +295,36 @@ ul#navigator li a:hover {
 	*/
 }
 
-/* .actions-box -------------------------------------------------------------- */
+/* .button ------------------------------------------------------------------ */
+
+.button {
+	overflow: visible;
+	padding: 3px 6px;
+	margin-right: 2px;
+	background-color: #E3E3E3;
+	/* -specific-
+	background: -webkit-gradient(linear, 0 40%, 0 70%, from(#F9F9F9), to(#E3E3E3));
+	background: -moz-linear-gradient(top, #F9F9F9, #E3E3E3);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFF9F9F9, endColorstr=#FFE3E3E3);
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFF9F9F9, endColorstr=#FFE3E3E3)";
+	margin-right: 2px;
+	*/
+	border: 1px solid #BBB;
+	font-weight: bold;
+	color: #888;
+	cursor: pointer;
+}
+.button:not([disabled]):focus,
+.button:not([disabled]):hover {
+	border-color: #999;
+	color: #888;
+}
+
+/* .actions-box ------------------------------------------------------------- */
 
 .actions-box {
+	overflow: auto;
 	border: 1px solid #dfdfdf;
-	height: 20px;
 	padding: 5px;
 	margin-top: 10px;
 	background-color: #dadada;
@@ -310,27 +337,8 @@ ul#navigator li a:hover {
 }
 .actions-box .action {
 	width: auto;
-	height: auto;
-	margin-right: 2px;
+	height: 22px;
 	display: none;
-}
-.actions-box .action.submit {
-	display: inline-block;
-}
-.actions-box .action.submit.default {
-	color: #fff;
-	border: 1px solid #5B80B2;
-	background-color: #7f9bca;
-	/* -specific-
-	background: -webkit-gradient(linear, 0 0%, 0 100%, from(#7f9bca), to(#5c79aa));
-	background: -moz-linear-gradient(top, #7f9bca, #5c79aa);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#ff7f9bca, endColorstr=#ff5c79aa);
-	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#ff7f9bca, endColorstr=#ff5c79aa)";
-	*/
-}
-.actions-box .action.submit.default:hover {
-	color: #fff;
-	border: 1px solid #5B80B2;
 }
 .actions-box .per-page-box {
 	float: right;
@@ -341,21 +349,57 @@ ul#navigator li a:hover {
 	width: 50px;
 	height: 22px;
 }
-.actions-box .delete-box {
+
+/* .submit-box -------------------------------------------------------------- */
+
+.submit-box {
+	overflow: auto;
+	border: 1px solid #dfdfdf;
+	padding: 5px;
+	margin-top: 10px;
+	background-color: #dadada;
+	/* -specific-
+	background: -webkit-gradient(linear, 0 0%, 0 100%, from(#fff), to(#dadada));
+	background: -moz-linear-gradient(top, #fff, #dadada);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffffff, endColorstr=#ffdadada);
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffffff, endColorstr=#ffdadada)";
+	*/
+}
+.submit-box .submit {
+	width: auto;
+	height: auto;
+}
+.submit-box .submit.default {
+	color: #fff;
+	border: 1px solid #5B80B2;
+	background: #7f9bca;
+	/* -specific-
+	background: -webkit-gradient(linear, 0 0%, 0 100%, from(#7f9bca), to(#5c79aa));
+	background: -moz-linear-gradient(top, #7f9bca, #5c79aa);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#ff7f9bca, endColorstr=#ff5c79aa);
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#ff7f9bca, endColorstr=#ff5c79aa)";
+	*/
+}
+.submit-box .submit.default:not([disabled]):focus,
+.submit-box .submit.default:not([disabled]):hover {
+	color: #fff;
+	border: 1px solid #486285;
+}
+.submit-box .delete-box {
 	float: right;
-	margin: 0px;
 	height: 100%;
 }
-.actions-box .delete-box a.delete:link,
-.actions-box .delete-box a.delete:visited {
+.submit-box .delete-box a.delete:link,
+.submit-box .delete-box a.delete:visited {
 	color: #CC3434;
 	vertical-align: middle;
 }
-.actions-box .delete-box a.delete:hover {
+.submit-box .delete-box a.delete:focus,
+.submit-box .delete-box a.delete:hover {
 	color: #993333;
 }
 
-/* LISTS ------------------------------------------------------------------- */
+/* LISTS -------------------------------------------------------------------- */
 
 /* acls */
 #acls .list th.action {
