--- a/src/webui/livemgr/templates/styles.html
+++ b/src/webui/livemgr/templates/styles.html
@@ -1,29 +1,29 @@
 <style type="text/css" media="screen, print">
 {% if debug %}
-	@import url("{{MEDIA_URL}}css/current/theme.css");
-	@import url('{{MEDIA_URL}}css/current/form.css');
-	@import url('{{MEDIA_URL}}css/current/search.css');
-	@import url('{{MEDIA_URL}}css/current/list.css');
-	@import url('{{MEDIA_URL}}css/current/pagination.css');
-	@import url('{{MEDIA_URL}}css/current/dashboard.css');
-	@import url('{{MEDIA_URL}}css/current/login.css');
-	@import url('{{MEDIA_URL}}css/current/tooltip.css');
-	@import url('{{MEDIA_URL}}css/current/modal.css');
+	@import url("{{MEDIA_URL}}css/theme.css");
+	@import url('{{MEDIA_URL}}css/form.css');
+	@import url('{{MEDIA_URL}}css/search.css');
+	@import url('{{MEDIA_URL}}css/list.css');
+	@import url('{{MEDIA_URL}}css/pagination.css');
+	@import url('{{MEDIA_URL}}css/dashboard.css');
+	@import url('{{MEDIA_URL}}css/login.css');
+	@import url('{{MEDIA_URL}}css/tooltip.css');
+	@import url('{{MEDIA_URL}}css/modal.css');
 	{% if "MSIE" in request.META.HTTP_USER_AGENT %}
-		@import url("{{MEDIA_URL}}css/current/specific-msie.css");
+		@import url("{{MEDIA_URL}}css/specific-msie.css");
 	{% else %}{% if "WebKit" in request.META.HTTP_USER_AGENT %}
-		@import url("{{MEDIA_URL}}css/current/specific-webkit.css");
+		@import url("{{MEDIA_URL}}css/specific-webkit.css");
 	{% else %}{% if "Gecko" in request.META.HTTP_USER_AGENT %}
-		@import url("{{MEDIA_URL}}css/current/specific-moz.css");
+		@import url("{{MEDIA_URL}}css/specific-moz.css");
 	{% endif %}{% endif %}{% endif %}
 {% else %}
 	@import url("{{MEDIA_URL}}css/all.min.css");
 	{% if "MSIE" in request.META.HTTP_USER_AGENT %}
-		@import url("{{MEDIA_URL}}css/current/specific-msie.min.css");
+		@import url("{{MEDIA_URL}}css/specific-msie.min.css");
 	{% else %}{% if "WebKit" in request.META.HTTP_USER_AGENT %}
-		@import url("{{MEDIA_URL}}css/current/specific-webkit.min.css");
+		@import url("{{MEDIA_URL}}css/specific-webkit.min.css");
 	{% else %}{% if "Gecko" in request.META.HTTP_USER_AGENT %}
-		@import url("{{MEDIA_URL}}css/current/specific-moz.min.css");
+		@import url("{{MEDIA_URL}}css/specific-moz.min.css");
 	{% endif %}{% endif %}{% endif %}
 {% endif %}
 </style>
