Let Django manage the auth_user_profile table. Remove redundant slash from URI.

--- a/webui/livemgr/templates/layout_base.html
+++ b/webui/livemgr/templates/layout_base.html
@@ -33,7 +33,7 @@
 	<div class="body-container">
 		{% block body %}{% endblock %}
 		<div class="spinner">
-			<img src="{{MEDIA_URL}}/img/spinner.gif" alt="Loading"/>
+			<img src="{{MEDIA_URL}}img/spinner.gif" alt="Loading"/>
 		</div>
 	</div>
 </body>
