Fix license comment block in templates.

--- a/webui/livemgr/templates/generic/flash.html
+++ b/webui/livemgr/templates/generic/flash.html
@@ -1,4 +1,4 @@
-{#
+{% comment %}
 	Copyright (C) 2010 Jardel Weyrich
 
 	This file is part of livemgr-webui.
@@ -18,7 +18,7 @@
 
 	Authors:
 	  Jardel Weyrich <jweyrich@gmail.com>
-#}
+{% endcomment %}
 
 {% if messages %}
 	{% for message in messages %}
