--- a/webui/livemgr/templates/groups/edit.html
+++ b/webui/livemgr/templates/groups/edit.html
@@ -1,4 +1,6 @@
-{#
+{% extends "layout.html" %}
+
+{% comment %}
 	Copyright (C) 2010 Jardel Weyrich
 
 	This file is part of livemgr-webui.
@@ -18,9 +20,8 @@
 
 	Authors:
 	  Jardel Weyrich <jweyrich@gmail.com>
-#}
+{% endcomment %}
 
-{% extends "layout.html" %}
 {% load i18n xinclude %}
 
 {% block title %}
