--- a/webui/livemgr/templates/layout_extra.html
+++ b/webui/livemgr/templates/layout_extra.html
@@ -1,4 +1,6 @@
-{#
+{% extends "layout_base.html" %}
+
+{% comment %}
 	Copyright (C) 2010 Jardel Weyrich
 
 	This file is part of livemgr-webui.
@@ -18,9 +20,8 @@
 
 	Authors:
 	  Jardel Weyrich <jweyrich@gmail.com>
-#}
+{% endcomment %}
 
-{% extends "layout_base.html" %}
 {% load custom_filters %}
 
 {% block extrahead %}
