--- a/webui/livemgr/templates/styles.html
+++ b/webui/livemgr/templates/styles.html
@@ -1,4 +1,4 @@
-{#
+{% comment %}
 	Copyright (C) 2010 Jardel Weyrich
 
 	This file is part of livemgr-webui.
@@ -18,7 +18,7 @@
 
 	Authors:
 	  Jardel Weyrich <jweyrich@gmail.com>
-#}
+{% endcomment %}
 
 <style type="text/css" media="screen, print">
 {% if debug %}
